Update projects.json with user changes

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -987,8 +987,7 @@
       "images": [],
       "videos": []
     },
-    "demoLink": "https://rafi0020.github.io/Mental_Health_Diagnosis_Voice_with_ViT-CNN/",
-    "github": "https://github.com/rafi0020/Mental_Health_Diagnosis_Voice_with_ViT-CNN"
+    "github": "https://rafi0020.github.io/Mental_Health_Diagnosis_Voice_with_ViT-CNN/"
   },
   {
     "id": "mental-stability-transfer-learning",
@@ -1061,8 +1060,7 @@
       "images": [],
       "videos": []
     },
-    "demoLink": "https://rafi0020.github.io/Mental_Stability_TransferLearning/",
-    "github": "https://github.com/rafi0020/Mental_Stability_TransferLearning"
+    "github": "https://rafi0020.github.io/Mental_Stability_TransferLearning/"
   },
   {
     "id": "hybrid-densevitgru-xai",
@@ -1134,8 +1132,7 @@
       "images": [],
       "videos": []
     },
-    "demoLink": "https://rafi0020.github.io/Hybrid-DenseViTGRU-XAI-Voice/",
-    "github": "https://github.com/rafi0020/Hybrid-DenseViTGRU-XAI-Voice"
+    "github": "https://rafi0020.github.io/Hybrid-DenseViTGRU-XAI-Voice/"
   },
   {
     "id": "selfsupervised-vit-noisy-voice",
@@ -1210,8 +1207,7 @@
       "images": [],
       "videos": []
     },
-    "demoLink": "https://rafi0020.github.io/SelfSupervised-ViT-Noisy-Voice-Spectrograms/",
-    "github": "https://github.com/rafi0020/SelfSupervised-ViT-Noisy-Voice-Spectrograms"
+    "github": "https://rafi0020.github.io/SelfSupervised-ViT-Noisy-Voice-Spectrograms/"
   },
   {
     "id": "skin-cancer-detection",
